--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <!--customs-->
+    <link rel="stylesheet" href="style/dark-theme.css">
+
 </head>
 <body>
     <div class="container">
@@ -20,6 +24,8 @@
             <img src="images/logo_page.png" srcset="images/logo_page.png">
             <!--Description-->
             <p>Google PlayStore Apps and Games</p>
+
+            <p> <a href="https://play.google.com/store/apps/developer?id=Duo+Code" target="_blank">Google PlayStore page</a></p>
         </div>
     </div>
   </div>
