--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <!--customs-->
     <link rel="stylesheet" href="style/dark-theme.css">
+    <link rel="stylesheet" href="style/button_theme1.css">
+    <link rel="stylesheet" href="style/button_theme2.css">
 
 </head>
 <body>
@@ -24,7 +26,11 @@
             <img src="images/logo_page.png" srcset="images/logo_page.png">
             <!--Description-->
             <p>Google PlayStore Apps and Games</p>
-
+            <!-- QR Code -->
+            <a class="button button1" href="https://play.google.com/store/apps/details?id=com.duocode.qrscanner" target="_blank"> <img class="icon" src="images/otherlogos/qr_code.png">QR Reader</a>
+            <br>
+            <br>
+            <br>
             <p> <a href="https://play.google.com/store/apps/developer?id=Duo+Code" target="_blank">Google PlayStore page</a></p>
         </div>
     </div>
