Add Anime Walls button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <!-- QR Code -->
             <a class="button button1" href="https://play.google.com/store/apps/details?id=com.duocode.qrscanner" target="_blank"> <img class="icon" src="images/otherlogos/qr_code.png">QR Reader</a>
             <br>
+            <!-- Anime Walls -->
+              <a class="button button1" href="https://play.google.com/store/apps/details?id=com.duocode.qrscanner" targer="_blank"> <img class="icon" src="images/otherlogos/anime_walls.png">Anime Wallpapers</a>
+            <br>
             <br>
             <br>
             <p> <a href="https://play.google.com/store/apps/developer?id=Duo+Code" target="_blank">Google PlayStore page</a></p>
