Update link Anime walls

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <!--Description-->
             <p>Google PlayStore Apps and Games</p>
             <!-- QR Code -->
-            <a class="button button1" href="https://play.google.com/store/apps/details?id=com.duocode.qrscanner" target="_blank"> <img class="icon" src="images/otherlogos/qr_code.png">QR Reader</a>
+            <a class="button button1" href="https://play.google.com/store/apps/details?id=com.duocode.qrscanner" target="_blank"> <img class="icon" src="images/otherlogos/qr_code.png"> QR Reader</a>
             <br>
             <!-- Anime Walls -->
-              <a class="button button1" href="https://play.google.com/store/apps/details?id=com.duocode.qrscanner" targer="_blank"> <img class="icon" src="images/otherlogos/anime_walls.png">Anime Wallpapers</a>
+              <a class="button button1" href="https://play.google.com/store/apps/details?id=com.duocode.animewallpapershd" targer="_blank"> <img class="icon" src="images/otherlogos/anime_walls.png"> Anime Wallpapers</a>
             <br>
             <br>
             <br>
