New button SuperheroWalls

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
               <a class="button button1" href="https://play.google.com/store/apps/details?id=com.duocode.animewallpapershd" targer="_blank"> <img class="icon" src="images/otherlogos/anime_walls.png"> Anime Wallpapers</a>
             <br>
             <br>
+            <!-- Superhero Walls -->
+              <a class="button button1" href="https://play.google.com/store/apps/details?id=com.duocode.superherowallpapers" targer="_blank"> <img class="icon" src="images/otherlogos/superhero_walls.png"> Superhero Wallpapers</a>
+            <br>
+            <br>
             <br>
             <p> <a href="https://play.google.com/store/apps/developer?id=Duo+Code" target="_blank">Google PlayStore page</a></p>
         </div>
