--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="column" style="margin-top: 10%">
             <!--Title-->
             <h1>DuoCode</h1>
-            <img src="images/logo_page.png" srcset="images/logo_page.png">
+            <img src="images/logo2.png" srcset="images/logo2.png">
             <!--Description-->
             <p>Google PlayStore Apps and Games</p>
             <!-- QR Code -->
