--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!--tab name-->
     <title>DuoCode</title>
     <!-- mobile config -->
-    <link href="images/logo.png" rel="icon" type="image/png">
+    <link href="images/logo2.png" rel="icon" type="image/png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
