--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
             <!-- Anime Walls -->
               <a class="button button1" href="https://play.google.com/store/apps/details?id=com.duocode.animewallpapershd" targer="_blank"> <img class="icon" src="images/otherlogos/anime_walls.png"> Anime Wallpapers</a>
             <br>
+            <!-- Kawaii Walls -->
+            <a class="button button1" href="https://play.google.com/store/apps/details?id=com.duocode.chibikawaiiwallpapershd" targer="_blank"> <img class="icon" src="images/otherlogos/kawaii_walls.png"> Kawaii Chibi Wallpapers</a>
+            <br>
             <!-- Superhero Walls -->
-              <a class="button button1" href="https://play.google.com/store/apps/details?id=com.duocode.superherowallpapers" targer="_blank"> <img class="icon" src="images/otherlogos/superhero_walls.png"> Superhero Wallpapers</a>
+            <a class="button button1" href="https://play.google.com/store/apps/details?id=com.duocode.superherowallpapers" targer="_blank"> <img class="icon" src="images/otherlogos/superhero_walls.png"> Superhero Wallpapers</a>
             <br>
             <br>
             <br>
